# local-efficiency-tools

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bootstrap/: command_registry.rs  lifecycle.rs  mod.rs  tray.rs
src-tauri/src/config/: mod.rs
src-tauri/src/modules/: controller_support.rs  mod.rs  shutdown.rs  state.rs
src-tauri/src/modules/app/: app.controller.rs  mod.rs
src-tauri/src/modules/file_ops/: file_ops.controller.rs  file_ops.dto.rs  file_ops.service.rs  mod.rs
src-tauri/src/modules/file_ops/service/: operations.rs  roots.rs  scan.rs
src-tauri/src/modules/hosts/: hosts.controller.rs  hosts.dto.rs  hosts.service.rs  mod.rs
src-tauri/src/modules/hosts/infrastructure/: hosts_file.rs  macos_hosts_helper.rs  mod.rs  windows_hosts_helper.rs
src-tauri/src/modules/hosts/service/: change.rs  public.rs  write.rs
src-tauri/src/modules/jobs/: jobs.controller.rs  jobs.dto.rs  jobs.service.rs  mod.rs
src-tauri/src/modules/media/: media.controller.rs  media.dto.rs  media.service.rs  mod.rs
src-tauri/src/modules/media/service/: collect.rs  (+18 more)
src-tauri/src/modules/mounts/: mod.rs  mounts.controller.rs  mounts.dto.rs  mounts.service.rs
src-tauri/src/modules/rename/: mod.rs  rename.controller.rs  rename.dto.rs  rename.service.rs
src-tauri/src/modules/system/: mod.rs  system.controller.rs  system.dto.rs  system.service.rs
src-tauri/src/observability/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/shared/: error.rs  fs_guard.rs  mod.rs
(+138 files in other folders)
